<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="Ilova haqida"
        android:textColor="#3F51B5"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollViewvertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Java tiliga kirish bo\'limi haqida"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about1"
                    android:paddingVertical="2sp"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Birinchi Java dasturi bo\'limi haqida"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about2"
                    android:paddingVertical="2sp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Javada o'zgaruvchilar bo\'limi haqida"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about3"
                    android:paddingVertical="2sp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Javada ma'lumot turlari bo\'limi haqida"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about4"
                    android:paddingVertical="2sp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Java operatorlari bo\'limi haqida"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about5"
                    android:paddingVertical="2sp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Javada If-else, Swich-Case bo\'limi haqida"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about6"
                    android:paddingVertical="2sp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold|italic"
                    android:paddingVertical="2sp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>